Fixed `z-index` of Manual Tool Message.

--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -58,6 +58,7 @@
 }
 
 .manual-tool-message {
+    z-index: -1;
     opacity: 0;
     position: fixed;
     top: 50%;
